--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,8 @@ body {
     --ocean, #404BBF;
   }
 
-.link {
-    text-decoration: none;
-}
+.link { text-decoration: none; }
+   
 
 .list {
     list-style-type: none;
@@ -60,14 +59,15 @@ text-transform: uppercase;
 }
 .header-list-link:hover,
 .header-list-link:focus{
-color: var(--iris, #4D5AE5);
+color: var(--ocean #404BBF);
 }
 
 .header-address {
-
+    color: var(--slate, #434455);
+    font-style: normal
 }
 .header-address-link {
-color: var(--navyblue, #2E2F42);
+color: var(--slate);
 font-size: 16px;
 line-height: 1.50;
 letter-spacing: 0.02em;
@@ -75,7 +75,7 @@ letter-spacing: 0.02em;
 
 .header-address-link:hover,
 .header-address-link:focus{
-color: var(--iris, #4D5AE5);
+color: var(--ocean #404BBF);
 }
 
 /* Hero */
@@ -166,7 +166,7 @@ letter-spacing: 0.02em;
     color: var(--navyblue, #2E2F42);
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.20;
+    line-height: 1.2;
     letter-spacing: 0.02em;
 }
 
@@ -176,8 +176,6 @@ letter-spacing: 0.02em;
     line-height: 1.50;
     letter-spacing: 0.02em;
 }
-
-/* Cases */
 
 /* Footer */
 
@@ -214,6 +212,27 @@ letter-spacing: 0.02em;
 
 .cases-item {
 }
+
+.cases-img{
+
+    width: 360;
+}
+
+.cases-subtitle {
+    color: var(--navyblue, #2E2F42);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.cases-text {
+    color: var(--slate, #434455);
+    font-size: 16px;
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+}
+
 .cases-btn {
 color: var(--iris, #4D5AE5);
 background-color: var(--flower, #F4F4FD);
@@ -221,7 +240,7 @@ font-size: 16px;
 font-family: 'Roboto', sans-serif;
 font-weight: 500;
 line-height: 1.50;
-letter-spacing: 0.04;
+letter-spacing: 0.04em;
 cursor: pointer;  
 }
 
