--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ text-transform: uppercase;
     
 }
 .header-list-link:hover,
-.header-list-link:focus{
+.header-list-link:focus {
 color: var(--ocean #404BBF);
 }
 
@@ -74,7 +74,7 @@ letter-spacing: 0.02em;
 }
 
 .header-address-link:hover,
-.header-address-link:focus{
+.header-address-link:focus {
 color: var(--ocean #404BBF);
 }
 
@@ -85,6 +85,7 @@ color: var(--ocean #404BBF);
 }
 .hero-title {
     color: var(--white, #FFFFFF);
+    text-align: center
     font-family: inherit;
 font-size: 56px;
 font-weight: 700;
@@ -102,6 +103,12 @@ letter-spacing: 0.02em;
     cursor: pointer;
 }
 
+.hero-btn:hover,
+.hero-btn:focus{
+    background-color;: var(--ocean #404BBF);
+
+}
+
 /* Strategy */
 
 .strategy {
@@ -113,6 +120,7 @@ letter-spacing: 0.02em;
 }
 .strategy-title {
     color: var(--navyblue, #2E2F42);
+    text-align: center
 font-size: 20px;
 font-weight: 500;
 line-height: 1.20;
@@ -146,10 +154,11 @@ letter-spacing: 0.02em;
 /* Team */
 
 .team {
-    background-color: var(--white, #FFFFFF);
+    background-color: var(--flower, #F4F4FD);
 }
 .team-title {
     color: var(--navyblue, #2E2F42);
+    text-align: center
     font-size: 36px;
     font-family: inherit;
     font-weight: 700;
@@ -160,6 +169,7 @@ letter-spacing: 0.02em;
 .team-list {
 }
 .team-item {
+    color: var(--white, #FFFFFF);
 }
 
 .team-subtitle {
@@ -183,7 +193,7 @@ letter-spacing: 0.02em;
     background-color: var(--navyblue, #2E2F42);
 }
 .footer-logo {
-    color: var(--white, #FFFFFF);
+    color: var(--iris #4D5AE5);
     background-color: var(--navyblue, #2E2F42);
 font-size: 18px;
 font-family:"Raleway", sans-serif;
@@ -193,7 +203,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 .footer-logo-acc {
-    color: var(--iris, #4D5AE5);
+    color: var(--flower, #F4F4FD);
 }
 
 .footer-text {
@@ -215,7 +225,7 @@ letter-spacing: 0.02em;
 
 .cases-img{
 
-    width: 360px;
+
 }
 
 .cases-subtitle {
