--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,13 @@ body {
 }
 
 :root {
-    --slate, #434455;
-    --navyblue, #2E2F42;
-    --iris, #4D5AE5;
-    --cloud, #F4F4FD;
-    --white, #FFFFFF;
-    --flower, #F4F4FD;
-    --ocean, #404BBF;
+    --slate: #434455;
+    --navyblue: #2E2F42;
+    --iris: #4D5AE5;
+    --cloud: #F4F4FD;
+    --white: #FFFFFF;
+    --flower: #F4F4FD;
+    --ocean: #404BBF;
   }
 
 .link { text-decoration: none; }
@@ -26,6 +26,9 @@ body {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
   }
 
 /*  Header  */
@@ -59,7 +62,8 @@ text-transform: uppercase;
 }
 .header-list-link:hover,
 .header-list-link:focus {
-color: var(--ocean #404BBF);
+
+color: var(--ocean)
 }
 
 .header-address {
@@ -75,7 +79,7 @@ letter-spacing: 0.02em;
 
 .header-address-link:hover,
 .header-address-link:focus {
-color: var(--ocean #404BBF);
+color: var(--ocean);
 }
 
 /* Hero */
@@ -85,7 +89,7 @@ color: var(--ocean #404BBF);
 }
 .hero-title {
     color: var(--white, #FFFFFF);
-    text-align: center
+    text-align: center;
     font-family: inherit;
 font-size: 56px;
 font-weight: 700;
@@ -105,7 +109,7 @@ letter-spacing: 0.02em;
 
 .hero-btn:hover,
 .hero-btn:focus{
-    background-color;: var(--ocean #404BBF);
+    background-color: var(--ocean);
 
 }
 
@@ -140,6 +144,7 @@ letter-spacing: 0.02em;
 }
 .portfolio-title {
     color: var(--navyblue, #2E2F42);
+    text-align: center
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
@@ -158,7 +163,7 @@ letter-spacing: 0.02em;
 }
 .team-title {
     color: var(--navyblue, #2E2F42);
-    text-align: center
+    text-align: center;
     font-size: 36px;
     font-family: inherit;
     font-weight: 700;
@@ -169,7 +174,7 @@ letter-spacing: 0.02em;
 .team-list {
 }
 .team-item {
-    color: var(--white, #FFFFFF);
+    background-color: var(--white);
 }
 
 .team-subtitle {
