--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ letter-spacing: 0.02em;
 }
 .strategy-title {
     color: var(--navyblue, #2E2F42);
-    text-align: center
+    text-align: center;
 font-size: 20px;
 font-weight: 500;
 line-height: 1.20;
@@ -144,7 +144,7 @@ letter-spacing: 0.02em;
 }
 .portfolio-title {
     color: var(--navyblue, #2E2F42);
-    text-align: center
+    text-align: center;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
