--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 /*  Header  */
 
 .header-nav-logo {
-    color: var(--iris, #4D5AE5);
+    color: var(--iris);
 font-size: 18px;
 font-family: "Raleway", sans-serif;
 font-weight: 800;
